합치기 완성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +15,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WhenandWhere"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Schedule"
+            android:exported="true" />
+        <activity
+            android:name=".Grouphome"
+            android:exported="true" />
+        <activity
+            android:name=".EditPlace"
+            android:exported="true" />
         <activity
             android:name=".middleplace"
             android:exported="true" />
