--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.WhenandWhere"
         tools:targetApi="31">
         <activity
+            android:name=".moimResult"
+            android:exported="false" />
+        <activity
+            android:name=".nickname"
+            android:exported="false" />
+        <activity
             android:name=".Schedule"
             android:exported="true" />
         <activity
