--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.WhenandWhere"
         tools:targetApi="31">
         <activity
-            android:name=".Schedule"
+            android:name=".ScheduleSetting"
             android:exported="true" />
         <activity
             android:name=".Grouphome"
@@ -62,14 +62,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".TimeResultActivity"
+            android:exported="true"> <!-- 또는 "false"로 설정 -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".memberAdd"
             android:exported="false" />
         <activity
             android:name=".NewGroupMake"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity"
             android:exported="true" />
         <activity
             android:name=".StartActivity"
