switch code add

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
         <activity
             android:name=".ScheduleSetting"
             android:exported="true" />
+        <activity
+            android:name=".ScheduleTitle"
+            android:exported="true" />
 
         <activity
             android:name=".EditPlace"
